[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/RoomMoveTest.gd" type="Script" id=1]
[ext_resource path="res://assets/rooms/maintenance_room_inner.jpg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 540 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 243.5, 133.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 215.69, 504.715 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 482.374, 100 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 482.374, 100 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 205, 540 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 256, 540 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 482.374, 100 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 149.687, 210.033 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 128, 540 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 800, 80 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 518.766, 323 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
default_room = "the_office"

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
limit_smoothed = true
editor_draw_limits = true
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Camera"]

[node name="Room" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MoveTimer" type="Timer" parent="Room"]
wait_time = 0.125
one_shot = true

[node name="Rooms" type="Node" parent="."]

[node name="TheOfficeInner" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/TheOfficeInner"]

[node name="Outer" type="Area2D" parent="Rooms/TheOfficeInner/Transitions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/TheOfficeInner/Transitions/Outer"]
visible = false
position = Vector2( 1792, 540 )
shape = SubResource( 1 )
disabled = true

[node name="Subscenes" type="Node" parent="Rooms/TheOfficeInner"]

[node name="Monitor" type="Area2D" parent="Rooms/TheOfficeInner/Subscenes"]
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/TheOfficeInner/Subscenes/Monitor"]
visible = false
position = Vector2( 652.5, 552.5 )
shape = SubResource( 2 )
disabled = true

[node name="TheOffice" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/TheOffice"]

[node name="Door" type="Area2D" parent="Rooms/TheOffice/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/TheOffice/Transitions/Door"]
visible = false
position = Vector2( 1266.75, 628.611 )
shape = SubResource( 3 )
disabled = true

[node name="Inner" type="Area2D" parent="Rooms/TheOffice/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/TheOffice/Transitions/Inner"]
visible = false
position = Vector2( 482.374, 984 )
shape = SubResource( 4 )
disabled = true

[node name="HallwayTheOffice" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/HallwayTheOffice"]

[node name="DoorTheOffice" type="Area2D" parent="Rooms/HallwayTheOffice/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/HallwayTheOffice/Transitions/DoorTheOffice"]
visible = false
position = Vector2( 1266.75, 984 )
shape = SubResource( 5 )
disabled = true

[node name="HallwayMaintenanceRoom" type="Area2D" parent="Rooms/HallwayTheOffice/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/HallwayTheOffice/Transitions/HallwayMaintenanceRoom"]
visible = false
position = Vector2( 1715, 540 )
shape = SubResource( 6 )
disabled = true

[node name="HallwayMaintenanceRoom" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/HallwayMaintenanceRoom"]

[node name="DoorMaintenanceRoom" type="Area2D" parent="Rooms/HallwayMaintenanceRoom/Transitions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/HallwayMaintenanceRoom/Transitions/DoorMaintenanceRoom"]
visible = false
position = Vector2( 1664, 540 )
shape = SubResource( 7 )
disabled = true

[node name="BackHallwayTheOffice" type="Area2D" parent="Rooms/HallwayMaintenanceRoom/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/HallwayMaintenanceRoom/Transitions/BackHallwayTheOffice"]
visible = false
position = Vector2( 935.824, 984 )
shape = SubResource( 8 )
disabled = true

[node name="MaintenanceRoom" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/MaintenanceRoom"]

[node name="Door" type="Area2D" parent="Rooms/MaintenanceRoom/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Rooms/MaintenanceRoom/Transitions/Door"]
visible = false
position = Vector2( 935.824, 984 )
shape = SubResource( 8 )
disabled = true

[node name="Inner" type="Area2D" parent="Rooms/MaintenanceRoom/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/MaintenanceRoom/Transitions/Inner"]
visible = false
position = Vector2( 1235.31, 580.348 )
shape = SubResource( 9 )
disabled = true

[node name="MaintenanceRoomInner" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/MaintenanceRoomInner"]

[node name="Outer" type="Area2D" parent="Rooms/MaintenanceRoomInner/Transitions"]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Rooms/MaintenanceRoomInner/Transitions/Outer"]
visible = false
position = Vector2( 128, 540 )
shape = SubResource( 10 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Rooms/MaintenanceRoomInner/Transitions/Outer"]
visible = false
position = Vector2( 800, 1000 )
shape = SubResource( 11 )
disabled = true

[node name="Subscenes" type="Node" parent="Rooms/MaintenanceRoomInner"]

[node name="PowerMonitor" type="Area2D" parent="Rooms/MaintenanceRoomInner/Subscenes"]
input_pickable = false
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/MaintenanceRoomInner/Subscenes/PowerMonitor"]
visible = false
position = Vector2( 979.183, 555 )
shape = SubResource( 12 )
disabled = true

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="BlackScreen" type="ColorRect" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeaveTween" type="Tween" parent="UI"]

[node name="EnterTween" type="Tween" parent="UI"]
[connection signal="timeout" from="Room/MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="tween_completed" from="UI/LeaveTween" to="." method="_on_LeaveTween_tween_completed"]
[connection signal="tween_started" from="UI/LeaveTween" to="." method="_on_LeaveTween_tween_started"]
[connection signal="tween_completed" from="UI/EnterTween" to="." method="_on_EnterTween_tween_completed"]
